<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar"
        android:minHeight="@dimen/toolbar_height"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/appNameSettings"
        app:titleMarginStart="6dp"
        app:titleTextColor="?attr/colorSecondary" />

    <ImageButton
        android:id="@+id/btnSettingsSave"
        android:layout_width="@dimen/bigfloating_size"
        android:layout_height="@dimen/bigfloating_size"
        android:layout_marginEnd="@dimen/bigfloating_margin"
        android:layout_marginRight="@dimen/bigfloating_margin"
        android:layout_marginBottom="@dimen/bigfloating_margin"
        android:background="@drawable/floatingbutton"
        android:contentDescription="@string/btnSettingsDescription"
        android:padding="@dimen/bigfloating_padding"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsSaveContentSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/settingsSaveContent"
        android:textColor="@color/foreground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSettings"
        app:switchPadding="10dp"
        app:useMaterialThemeColors="true"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsAutoDarkSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/settingsAutoDark"
        android:textColor="@color/foreground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsSaveContentSwitch"
        app:switchPadding="10dp"
        app:useMaterialThemeColors="true"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsDarkModeSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/settingsDarkMode"
        android:textColor="@color/foreground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsAutoDarkSwitch"
        app:switchPadding="10dp"
        app:useMaterialThemeColors="true"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsFastModeSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/settingsFastMode"
        android:textColor="@color/foreground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsDarkModeSwitch"
        app:switchPadding="10dp"
        app:useMaterialThemeColors="true"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/layoutBuildApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layoutBuildBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtAppInformationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textColor="@color/foreground"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtAppInformationConcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" @ "
            android:textColor="@color/foreground"
            android:textSize="12sp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/txtAppInformationVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appVersion"
            android:textColor="@color/foreground"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBuildBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtBaseInformationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_libraryEchtzeytBasedOn"
            android:textColor="@color/foregroundHint"
            android:textSize="10sp"
            tools:ignore="SmallSp,TextContrastCheck" />

        <TextView
            android:id="@+id/txtBaseInformationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_libraryEchtzeytName"
            android:textColor="@color/foregroundHint"
            android:textSize="10sp"
            tools:ignore="SmallSp,TextContrastCheck" />

        <TextView
            android:id="@+id/txtBaseInformationConcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" @ "
            android:textColor="@color/foregroundHint"
            android:textSize="10sp"
            tools:ignore="HardcodedText,SmallSp,TextContrastCheck" />

        <TextView
            android:id="@+id/txtBaseInformationVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_libraryEchtzeytVersion"
            android:textColor="@color/foregroundHint"
            android:textSize="10sp"
            tools:ignore="SmallSp,TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>